# CppExercise

AddressBook_management/: AddBook_management.cpp  CMakeLists.txt
Computer_Room_Reserve/: Admin.cpp  Admin.h  CMakeLists.txt  Identity.h  computerRoom.h  globalFile.h  main.cpp  orderFile.cpp  orderFile.h  student.cpp  student.h  teacher.cpp  teacher.h
SpeechCompetition/: CMakeLists.txt  main.cpp  speaker.cpp  speaker.h  speechManager.cpp  speechManager.h
employee_management/: CMakeLists.txt  boss.cpp  employee.cpp  main.cpp  manager.cpp  workManager.cpp
employee_management/header/: boss.h  employee.h  manager.h  worker.h  workerManager.h
